feat: added extended trace message to webserver
